Updates to site styling and bug fixes - Fixed backgrounds not showing on some pages - Fixed background black bars on videos on home page - Updated project page styling - Updated about me page styling

--- a/src/Pages/AboutMe/AboutMe.css
+++ b/src/Pages/AboutMe/AboutMe.css
@@ -2,7 +2,7 @@
 	content: "";
 	position: fixed;
 	z-index: -1;
-	background-image: url("~/public/base_back.jpeg");
+	background-image: url("~/base_back.jpeg");
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	background-position: center;
